--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@ankit_kash_yap/medium": "^1.0.0",
     "@prisma/extension-accelerate": "^1.0.0",
     "hono": "^4.1.4",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.11.0"
   },
   "devDependencies": {
