--- a/common/package.json
+++ b/common/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@ankit_kash_yap/medium",
-  "version": "1.0.0",
+  "name": "package-medium",
+  "version": "1.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
