--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.8",
@@ -22,7 +23,7 @@
     "framer-motion": "^11.0.24",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.363.0",
-    "package-medium": "^1.0.5",
+    "package-medium": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
