--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.0.24",
     "highlight.js": "^11.9.0",
     "jodit-react": "^4.0.15",
