--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.28.9",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.0.24",
